# lc3tools-ng

./: CHANGE_LOG  Makefile.def  README.md  configure  lc3.def  lc3.f  lc3convert.f  lc3sim-tk.def  lc3sim.c  lc3sim.h  lc3tools-ng.rb  meson.build  meson_options.txt  symbol.c  symbol.h
scripts/: compile-lc3-to-dir.sh  create-lc3sim-tk.sh  generate-header-for-binary.sh  generate-header.c
